--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
-<div class="container" style="margin-top: 20px;">
-    <table class="table">
+<div class="container">
+    <img src="./assets/iuc.jpg" class="img-rounded" alt="Cinque Terre" style="width:300px;height:500px;">
+    <h2>Pagal Ladki</h2>
+    <!-- <table class="table">
         <thead>
             <tr>
                 <th>Name</th>
@@ -18,5 +20,5 @@
             </td>
            </tr>
         </tbody>
-    </table>
+    </table> -->
 </div>
